--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       id: login-ecr
       uses: docker/login-action@v2
       with:
-        registry: public.ecr.aws/r0w6f3t3
+        registry: public.ecr.aws
         username: ${{ secrets.AWS_ACCESS_KEY_ID }}
         password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     - name: Build, tag, and push image to Amazon ECR
