--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,5 +56,5 @@ jobs:
         ECR_REPOSITORY: vrising
         IMAGE_TAG: ${{ github.ref }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:build-${IMAGE_TAG##*/} .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG##*/} .
         docker push --all-tags $ECR_REGISTRY/$ECR_REPOSITORY
